@@ -1,6 +1,7 @@
 From ucommon 2.0.8 to 2.0.9
 - Added NamedTree/treemap copy constructor and changed id behavior
- 
+- Improved cmake support using proper build options and adding cpack
+
 From ucommon 2.0.7 to 2.0.8
 - support for optional cmake based build system being added
 
